Motion Tracking 20x Slower Under Standard Windows Build vs MinGW or Mac OS or Linux #34299

Closed
opened 2013-02-18 09:14:42 +01:00 by Dan Melchione · 12 comments

%%%--- Operating System, Graphics card ---
Windows 8 x64

- Blender version with error, and version that worked ---

2.66 and 2.65a both Windows 64 and 32 bit have this issue. OSX, Linux, and experimental mingw all seem ok.

- Short description of error ---

Motion tracking seems to be about 20x+ slower on Windows 8 (don't have a different version to test). I tried using a Mac Mini using both OS X and Windows 8 x64 with boot camp.

I also tested on a regular Windows laptop and motion tracking in windows is very very slow on it as well. Under Ubuntu 12.10 Linux on the same laptop motion tracking is fine.

I tried both 32 bit and 64 bit 2.65a and the new 2.66. Motion tracking in windows for all of them is too slow to be useable. Tried the mingw experimental release and it seems to run at normal speed.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Track a video with Windows vs OSX, Linux, or even the experimental mingw release. The windows build is much slower at tracking.

%%%

%%%--- Operating System, Graphics card --- Windows 8 x64 - Blender version with error, and version that worked --- 2.66 and 2.65a both Windows 64 and 32 bit have this issue. OSX, Linux, and experimental mingw all seem ok. - Short description of error --- Motion tracking seems to be about 20x+ slower on Windows 8 (don't have a different version to test). I tried using a Mac Mini using both OS X and Windows 8 x64 with boot camp. I also tested on a regular Windows laptop and motion tracking in windows is very very slow on it as well. Under Ubuntu 12.10 Linux on the same laptop motion tracking is fine. I tried both 32 bit and 64 bit 2.65a and the new 2.66. Motion tracking in windows for all of them is too slow to be useable. Tried the mingw experimental release and it seems to run at normal speed. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Track a video with Windows vs OSX, Linux, or even the experimental mingw release. The windows build is much slower at tracking. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%libmv seems to be compiled with optimizations disabled:

In bf-blender/trunk/blender/extern/libmv/CMakeLists.txt:
if(MSVC)
set(MSVC_OFLAGS O1 O2 Ox)
foreach(FLAG ${MSVC_OFLAGS})
string(REPLACE "${FLAG}" "Od" CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
string(REPLACE "${FLAG}" "Od" CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO}")
endforeach()
endif()%%%

%%%libmv seems to be compiled with optimizations disabled: In bf-blender/trunk/blender/extern/libmv/CMakeLists.txt: if(MSVC) set(MSVC_OFLAGS O1 O2 Ox) foreach(FLAG ${MSVC_OFLAGS}) string(REPLACE "${FLAG}" "Od" CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}") string(REPLACE "${FLAG}" "Od" CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO}") endforeach() endif()%%%

%%%We disable optimization because of some bug in MSVC optimizer which ruins how SSBA library works. But there's no reason to disable optimization for Ceres, which is fixed in svn rev54623.

However, this could not be a culptrit of fficial releases which are built using SCons which wasn't affected by this issue.

Further, i did tests on my laptop with Windows 7 64bit using 2.65a and 2.66-RC and both of them are just as fast as linux builds on tracking. It could be something specific for Windows 8 crap, but i don't have it here to test.

Dan, it's not clear for me which Windows version was o nlaptop you've tested?%%%

%%%We disable optimization because of some bug in MSVC optimizer which ruins how SSBA library works. But there's no reason to disable optimization for Ceres, which is fixed in svn rev54623. However, this could not be a culptrit of fficial releases which are built using SCons which wasn't affected by this issue. Further, i did tests on my laptop with Windows 7 64bit using 2.65a and 2.66-RC and both of them are just as fast as linux builds on tracking. It could be something specific for Windows 8 crap, but i don't have it here to test. Dan, it's not clear for me which Windows version was o nlaptop you've tested?%%%

%%%20x slowdown seems unrealistic to me? I tested with some scenes here ( Full HD mov files from a Canon DSLR) and it runs at a reasonable speed. %%%

%%%20x slowdown seems unrealistic to me? I tested with some scenes here ( Full HD mov files from a Canon DSLR) and it runs at a reasonable speed. %%%

%%%Will close this report now for the following reasons.

  1. Neither Sergey nor I could confirm any slowdown on Windows.
  2. 20x seems quite exaggerated.

Without further details nor a test scene with the tracking footage, there is not much we can do.%%%

%%%Will close this report now for the following reasons. 1) Neither Sergey nor I could confirm any slowdown on Windows. 2) 20x seems quite exaggerated. Without further details nor a test scene with the tracking footage, there is not much we can do.%%%
Author

%%%Okay, did a timing test with the attached .blend file file against http://cdn.hollywoodcamerawork.us/plates/objecttracking/hcw_blaster_walk.zip
Windows x64 (2.65.0 r53189): 75 seconds for the first 10 frames
mingw (2.65.10 r25419): 3 seconds for the first 10 frames%%%

%%%Okay, did a timing test with the attached .blend file file against http://cdn.hollywoodcamerawork.us/plates/objecttracking/hcw_blaster_walk.zip Windows x64 (2.65.0 r53189): 75 seconds for the first 10 frames mingw (2.65.10 r25419): 3 seconds for the first 10 frames%%%
Author

%%%Windows 8 x64 on two different windows laptops and a mac mini. My wife's machine can dual boot into windows 7, so I'll try that and report how it goes.%%%

%%%Windows 8 x64 on two different windows laptops and a mac mini. My wife's machine can dual boot into windows 7, so I'll try that and report how it goes.%%%
Author

%%%P.S. The only thing different I think I can note (other than Windows 8 x64, I will check against a Win7 machine soon) is I used the fast motion preset which has a bigger search area than the default and have 6 different points being tracked which might be more cpu intensive than what you tested with?%%%

%%%P.S. The only thing different I think I can note (other than Windows 8 x64, I will check against a Win7 machine soon) is I used the fast motion preset which has a bigger search area than the default and have 6 different points being tracked which might be more cpu intensive than what you tested with?%%%
Author

%%%blender-2.65-r54646-win64 80 seconds for the first 10 frames on Windows 8 x64... will report on Windows 7 tomorrow.%%%

%%%blender-2.65-r54646-win64 80 seconds for the first 10 frames on Windows 8 x64... will report on Windows 7 tomorrow.%%%
Author

%%%Okay, test Win7 with blender-2.65-r54646-win64 and it is slow as well...%%%

%%%Okay, test Win7 with blender-2.65-r54646-win64 and it is slow as well...%%%

%%%Made some tweaks to build configuration (svn rev54684). Shall be stable reconstruction and fast tracking now.%%%

%%%Made some tweaks to build configuration (svn rev54684). Shall be stable reconstruction and fast tracking now.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34299
No description provided.